fixed code wrapping

--- a/src/scss/_viewer.scss
+++ b/src/scss/_viewer.scss
@@ -77,6 +77,9 @@
 
 .viewer {
         padding-bottom: 2rem;
+        > pre {
+                white-space: pre-wrap;
+        }
 }
 
 @media print {
